# FieldSAFE

./: .gitmodules  README.md
ground_truth/dynamic/: deg2utm.m  demo.m  dynamic_ground_truth.txt  readme.md  tractor_gps_coordinates.csv
ground_truth/static/: RGB2Labels.m  demo.m  labels.csv  readme.md
ros/: .gitignore
ros/src/camera_info_publisher/: CMakeLists.txt  package.xml
ros/src/camera_info_publisher/data/: FlirA65.yaml
ros/src/camera_info_publisher/src/: camera_info_publisher.py
ros/src/demo/: CMakeLists.txt  demo.rviz  demo_markers.rviz  package.xml
ros/src/demo/launch/: bag_to_images.launch  demo.launch  demo_markers.launch  demo_record.launch  map_visualization.xml  pose_estimation.xml  robot_localization.launch  static_tf.xml
ros/src/demo/urdf/: multisenseS21.urdf  sensorFrame.urdf
ros/src/gps/gps_to_odometry/: CMakeLists.txt  package.xml
ros/src/gps/gps_to_odometry/src/: gps_hdt_to_odometry_node.cpp
ros/src/gps/htf_rtk_gps/: CMakeLists.txt  package.xml
ros/src/gps/htf_rtk_gps/launch/: htf_rtk_gps.launch  htf_rtk_gps_sdu.launch  htf_rtk_gps_serial.launch
ros/src/gps/htf_rtk_gps/msg/: Course_Speed.msg  GPHDT.msg
ros/src/gps/htf_rtk_gps/src/: rtk_gps.cpp  rtk_gps.hpp  rtk_gps_node.cpp
ros/src/gps/nmea_navsat_driver/launch/: nmea_navsat_driver.launch
ros/src/gps/nmea_navsat_driver/scripts/: nmea_serial_driver  nmea_topic_serial_reader
ros/src/gps/nmea_navsat_driver/src/libnmea_navsat_driver/: driver.py  parser.py
ros/src/ground_truth/: CMakeLists.txt  package.xml
ros/src/ground_truth/data/: gps_marker_positions.csv  utm2PixelsTransformMatrix.csv
ros/src/ground_truth/src/: dynamic_visualizer.py  static_visualizer.py
ros/src/htf_delphi_esr/: CMakeLists.txt  package.xml
ros/src/htf_delphi_esr/msg/: Delphi_radar.msg
ros/src/htf_delphi_esr/src/: radar_delphi_visualization_node.cpp
ros/src/htf_safe_msgs/: CMakeLists.txt  package.xml
ros/src/htf_safe_msgs/msg/: GNSSPositionData.msg
ros/src/htf_velodyne_32e/: CMakeLists.txt  package.xml
ros/src/htf_velodyne_32e/launch/: 32e_points_postprocessing.launch
ros/src/htf_velodyne_32e/msg/: Velodyne_Gps.msg  Velodyne_Imu.msg
ros/src/image_publisher/: CMakeLists.txt  package.xml
ros/src/image_publisher/src/: main.cpp
ros/src/image_view/src/nodes/: extract_images.cpp
ros/src/mirror_image/: CMakeLists.txt  package.xml
ros/src/mirror_image/launch/: mirror_image.launch
ros/src/mirror_image/src/: mirror_image.py
ros/src/msgs/: CMakeLists.txt  package.xml
ros/src/rviz_textured_quads/: CMakeLists.txt  README.md  mesh_display_custom_plugin_description.xml  package.xml
ros/src/rviz_textured_quads/include/rviz_textured_quads/: mesh_display_custom.h
ros/src/rviz_textured_quads/src/: mesh_display_custom.cpp
ros/src/rviz_textured_quads/tests/: display_images_test.py
