<?xml version="1.0"?>
<package format="2">
  <name>camera_info_publisher</name>
  <version>0.0.0</version>
  <description>The camera_info_publisher package</description>

  <maintainer email="mahirgulzar343@gmail.com">Mahir Gulzar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
